--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.5",
+    "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
